--- a/Slak/24.md
+++ b/Slak/24.md
@@ -17,7 +17,7 @@
 
 ### The story of Nectanebus or the Alexander legend in the early middle ages 
 
-### The _Pseudo-Callisthenes.
+### The Pseudo Callisthenes.
 
 The oldest version of the legend or romance of Alexander is naturally believed to have been written in the Greek language but is thought to have been produced in Egypt at Alexandria. But the Greek manuscripts of the story are all of the medieval or Renaissance period; indeed, none of them antedates the eleventh or twelfth century. [^551:1]  
 Furthermore, they differ very considerably in content and arrangement, so that the problem of distinguishing or recovering the original text of the _Pseudo-Callisthenes_, as the work is commonly called, and of dating it, is one with which various scholars have grappled. It has been held that the original Greek text which lies back of the later versions was written not later than 200 A.D. But Basil, writing in Greek in the fourth century and well-versed in Greek culture, is apparently unfamiliar with the story of Nectanebus, since he says, 
@@ -64,11 +64,13 @@ Since Callisthenes was also a relative and pupil of Aristotle, his name was an e
 
  [^553:2]: Reitzenstein, _Poimandres_, Leipzig, 1904, pp. 308-309. 
  
-### Its unhistoric character.
+### Its unhistoric character
 
 Perhaps no better single illustration of the totally unhistorical and romantic character of the _Pseudo-Callisthenes_ can be given than the perversion of Alexander's line of march in most of the Greek and all of the Latin versions. He is represented as first proceeding to Italy and receiving royal honors at Rome; then he goes to Carthage and reaches the shrine of Ammon by traversing Libya; next he passes through Egypt into Syria and destroys Tyre, after which he crosses Arabia and has his first battle with Darius. Presently he is found back in Greece sacking Thebes and dealing with Corinth, Athens, and Sparta. Then his Asiatic conquests are resumed. 
 
-### Julius Valerius.
+### Julius Valerius
+
+
 
 The oldest Latin version of the Alexander romance is the _Res gestae Alexandri Macedonis_ of Julius Valerius. Who he was and when he lived are matters still veiled in obscurity; but it is customary to place him in the early fourth century on the basis of Zacher's contention that the Res gestae is copied in certain portions of the Itinerarium Alexandri, which was written during the years 340-345 A.D.  
 This dating would also serve to explain why Basil, writing in Greek before 379, had never heard of a king who had taken steps to have his son born under the star of royalty, while Augustine, writing in Latin between 413 and 426, mentions the story of a sage who selected a certain hour for intercourse with his wife in order that he might beget a marvelous son.  
@@ -118,7 +120,7 @@ Julius Valerius does not even mention Dindimus, but a third epistolary discussio
 
  [^556:3]: Published with _Palladius_ by Sir Edward Bisse in 1665; MSS are numerous.
 
-### Leo's _Historia de praeliis_ .
+### Leo's Historia de praeliis.
 
 Leo, an archpriest of Naples, who went to Constantinople about 941-944 on an embassy for two dukes of Campania, John and Marinus, brought back with him a _History containing the conflicts and victories of Alexander the Great, King of Macedon_. Later Duke John, who was fond of science, had Leo translate this work from Greek into Latin, in which tongue it is entitled _Historia de praeliis_. We learn these facts from its prologue which is found only in the oldest extant manuscript, a Bamberg codex of the eleventh century, [^557:1] and in a manuscript of the twelfth or thirteenth century at Munich. 
 
@@ -128,11 +130,11 @@ The location of these two manuscripts suggests that the work was early carried f
 
  [^557:2]: Its influence would therefore seem to have been upon the later prose romances and not upon French vernacular poetry. Known at first only in Italy and Germany, its popularity became general in western Europe toward the close of the middle ages. 
 
-### Medieval metamorphosis of ancient tradition.
+### Medieval metamorphosis of ancient tradition
 
 In the foregoing observations we may seem to have digressed too far from our main theme of science and magic into the domain of literary history. But the development of the Alexander legend, which happens to have been traced more thoroughly than perhaps any other one thread in the medieval metamorphosis of ancient tradition, throws light at least by analogy upon many matters in which we are interested: the state of medieval manuscript material, the continuity and yet the alteration of ancient culture during the early middle ages, the process of translation from the Greek which went on even then, and the varying rapidity or slowness with which books circulated and ideas permeated. 
 
-### Survival of magical and scientific features.
+### Survival of magical and scientific features
 
 Moreover, the story of Alexander, especially as adapted by the middle ages, contained a large amount of magic and science, more especially the former. The Epitome might omit a great deal else, but it kept intact the opening portion of the _Pseudo-Callisthenes_ and of Julius Valerius concerning the adventures of Nectanebus, the sage and magician from Egypt, the astrologer and the natural father of Alexander, Indeed, the titles in some manuscripts suggest that Nectanebus came to rival Alexander for medieval readers as the hero of the story. Thus we find a _History of Alexander, King of Macedon, and of Nectanebo, King' of Egypt_, [^558:1] 
 
@@ -146,7 +148,7 @@ or a Latin metrical version by "Uilikinus" or Aretinus Quilichinus of Spoleto in
 
  [^558:3]: CUL 1429 (Gg. I, 34), 14th century, No. 5, 35 fols. Also in CU Trinity 1041, 14th century, fols. 200V-2I2V, "De Nectanabo magnum genuerit Alexandrum. Egipti sapientes ..." 
 
-### Who was Nectanebus?
+### Who was Nectanebus
 
 Pliny in the _Natural History_ describes the obelisk of Necthebis, king of Egypt, whom he places five centuries before Alexander the Great. [^558:4] 
 
@@ -164,7 +166,7 @@ It is the latter who was forced by the Persians to flee to Ethiopia nine years b
 
  [^559:2]: Berthelot (1885), pp. 29-30. 
 
-### A scientific key-note.
+### A scientific keynote
 
 A note suggestive of both natural science and occult science is struck by the opening passage of the Latin epitomes and of the oldest Greek manuscript; the first page of Julius Valerius is missing and has to be supplied from the epitomes. The first words are "The Egyptian sages," and the first sentence describes their scientific ability in measuring the earth and in tracing the revolutions of the heavens and numbering the stars. 
 
@@ -184,11 +186,11 @@ In one Latin manuscript of the fifteenth century the History of Alexander the Gr
 
  [^560:1]: CLM 215, fols. 176-94, "Egiptiorum gentem in mathematica magica quam in arte fuisse valentem littere tradunt." 
 
-### Magic of Nectanebus.
+### Magic of Nectanebus
 
 Next we are told, and the account Is practically the same in all the versions of the story, how by means of his basin filled with water, his wax images of ships and men, his rod or wand of ebony, and the incantations with which he addressed the gods above and below, Nectanebus had been hitherto able to destroy all the armies and to sink all the fleets that had come against him. But when one day he found his magic unavailing to save him, he shaved his head and beard and fled to Macedon, where in linen garb he plied the trade of an astrologer. 
 
-### Nectanebus as an astrologer.
+### Nectanebus as an astrologer
 
 In this he soon became so celebrated that the fame of his predictions reached the ears of the queen Olympias, who consulted him during an absence of Philip. When she asked Nectanebus by means of what art he divined the future so truthfully, he answered that there were many varieties of divination. Julius Valerius and the Latin epitomes mention specifically only interpreters of dreams and astrologers, but the Greek, Syriac, and Ethiopic versions give more elaborate lists of various kinds of diviners. [^560:2]  
 Nectanebus next produced an astrological tablet adorned with gold and ivory and with each planet and the horoscope represented by a different stone or metal. With the aid of this he read the queen's horoscope and told her that she would have a son by the God Ammon and would be forewarned soon to that effect in a dream.   
@@ -196,11 +198,11 @@ Olympias replied that if such a dream came to her, she would no longer employ Ne
 
  [^560:2]:  _Pseudo-Callisthenes_, 1, 4, "casters of horoscopes, readers of signs, interpreters of dreams, ventriloquists, augurs, genethlialogists, the so-called magi to whom divination is an open book." Budge, Syriac version, p. 4, "The interpreters of dreams are of many kinds and the knowers of signs, those who understand divination, Chaldean augurs and casters of nativities; the Greeks call the signs of the zodiac 'sorcerers'; and others are counters of the stars. As for me, all of these are in my hands and I myself am an Egyptian prophet, a magus, and a counter of the stars." Budge, Ethiopic Histories, p. II, "Then Nectanebus answered and said unto her, 'Yea. Those who have knowledge of the orbs of heaven are of many kinds. Some are interpreters of dreams, and some have knowledge of what shall happen in the future, and some understand omens, and some cast nativities, and there are besides all those who know magic and who are renowned be- cause they are learned in their art, and some are skilled in the motion of the stars of heaven: but I have full knowledge of all these things.' " 
 
-### A magic dream.
+### A magic dream
  
 Nectanebus thereupon sought for herbs useful to command dreams, plucked them, and pressed a syrup out of them. He placed a wax image of the queen inscribed with her name upon a little couch, lighted lamps, and poured his syrup over the wax figure, muttering a secret and efficacious incantation the while. By this means he brought it about that the queen would dream or think she dreamed whatever he said to the wax image of her. Later Nectanebus himself played the part of the god Ammon, announcing his coming beforehand to Olympias by making by his "science" a dragon which glided into her presence. 
 
-### Lucian on Olympias and the serpeht.
+### Lucian on Olympias and the serpeht
  
 Lucian of Samosata in the second century tells us that it was a common story in his time that Olympias had lain with a serpent before giving birth to Alexander. He suggests as the explanation of how this tale originated the fact that at Pella in Macedonia there is a breed of large serpents, 
 
@@ -210,18 +212,18 @@ Lucian of Samosata in the second century tells us that it was a common story in 
 
 As is apt to be the case in ancient efforts to give a natural explanation of what purports to be miraculous or supernatural, Lucian's biology is only slightly less incredible than Nectanebus's magic transformations. 
 
-### More dream-sending; magic transformation.
+### More dreamsending; magic transformation
 
 As the queen became pregnant, "Nectanebus consecrated a hawk and told it to go to Philip," who was still absent, "to stand by him through the night and to instruct him in a dream as it was ordered." [^561:2]  
 The vision in question was explained by an interpreter of dreams to Philip as signifying that his wife would have a son by the god Ammon. Nevertheless Philip was somewhat suspicious and hastened to bring his wars to a close and hurry home. Nectanebus, however, rendering himself invisible by means of the magic art, continued to deceive both king and queen. Once he terrified the court by appearing again in the form of a huge hissing serpent, but put his head in Olympias's lap and then kissed her. Thereupon he turned from a serpent into an eagle and flew away. Philip was then really convinced that his wife's lover was the god Ammon. 
 
  [^561:2]: The Syriac and Ethiopic versions are somewhat more detailed as to the magic by which Philip's dream was produced. Budge, Syriac version, p. 8, "Then Nectanebus . . . brought a hawk and muttered over it his charms and made it fly away with a small Quantity of a drug, and that night it shewed Philip a dream." Budge, Ethiopic Histories, p. 21, "Then Nectanebus took a swift bird and muttered over it certain charms and names, and ... in one day and one night it traversed many lands and countries and seas, and it came to Philip by night and stopped. And it came to pass at that very hour . . . that Philip saw a marvelous dream." 
  
-### An omen interpreted.
+### An omen interpreted
 
 Before the birth of Alexander the following omen befell Philip. As he sat absorbed in thought in a place where there were many birds flying about, one of them laid an egg in his lap. It rolled to the ground, the shell broke, and a snake issued forth. It circled about the egg-shell but when it tried to reenter the shell was prevented by death. When Antiphon, the interpreter of omens, was consulted concerning this portent, he said that it signified that a son should be born who would conquer the world but die before he could regain his native land. 
 
-### The birth of Alexander.
+### The birth of Alexander
 
 The day of Olympias's delivery now approached and Nectanebus, in his office of astrologer, stood by her side to tell her when the favorable moment had arrived for the birth of her child. Once he urged her to wait, since a child bom at that moment would be a slave and a captive. Again he bade her restrain herself, for at that moment an effeminate would be born. At last the favorable instant came for the birth of a world conqueror, and Alexander was born amid an earthquake, thunder, and lightning. In this case, therefore, the moment of birth is regarded as controlling the destiny. Many astrologers, however, considered the moment of conception as of greater importance; we have already heard Augustine tell of the sage who chose a certain hour for intercourse with his wife in order to beget a marvelous son; and in the thirteenth century Albertus Magnus, in his treatise on animals, informs us that 
 
@@ -229,7 +231,7 @@ The day of Olympias's delivery now approached and Nectanebus, in his office of a
 
  [^563:1]: In another place, however, Albert calls Philip Alexander's father, De causis et proprietatibus elementorum et planetarum, II, ii, I. 
 
-### The death of Nectanebus.
+### The death of Nectanebus
 
 The death of Nectanebus was as closely in accord with the stars as was the birth of Alexander. At the age of twelve Alexander found Nectanebus in consultation with Olympias and, attracted by his astrological tablet, made him promise to show him the stars at night. Then as Nectanebus walked along star-gazing, Alexander pushed him into a steep pit which they chanced to pass, and Nectanebus lay there with a broken neck. When he asked Alexander the reason for his act, the boy replied that it was in order to convince him of the futility of his art, since he gazed at the stars unmindful of what threatened him from the ground. But Nectanebus rebuts this revised version of the maid servant's taunt to Thales by telling Alexander that he had been forewarned by the stars that he should be killed by his own son, and by revealing to Alexander the secret of his birth. [^563:2]  
 In concluding the story of Nectanebus it is perhaps worth while to emphasize the fact that the epitomes and Julius Valerius often use the word magus of Nectanebus as an astrologer and that in general magic, astrology, and divination are indissolubly connected. 
@@ -242,7 +244,7 @@ Some account is given both in Julius Valerius and the longer epitome of Alexande
 
  [^564:1]: VI, 4. 
 
-### The _Letter to Aristotle_.
+### The Letter to Aristotle
 
 Nor does Alexander's _Letter to Aristotle_ on the marvels of India reveal many specific instances of superstition that are at all interesting. For the most part it recounts his marches, the sufferings of his army from thirst, combats with wild beasts, serpents, and hippopotamuses, and the treasures which he captured. Alexander states that 
 
