--- a/Slak/24.md
+++ b/Slak/24.md
@@ -17,7 +17,7 @@
 
 ### The story of Nectanebus or the Alexander legend in the early middle ages 
 
-### The Pseudo Callisthenes.
+### The Pseudo Callisthenes
 
 The oldest version of the legend or romance of Alexander is naturally believed to have been written in the Greek language but is thought to have been produced in Egypt at Alexandria. But the Greek manuscripts of the story are all of the medieval or Renaissance period; indeed, none of them antedates the eleventh or twelfth century. [^551:1]  
 Furthermore, they differ very considerably in content and arrangement, so that the problem of distinguishing or recovering the original text of the _Pseudo-Callisthenes_, as the work is commonly called, and of dating it, is one with which various scholars have grappled. It has been held that the original Greek text which lies back of the later versions was written not later than 200 A.D. But Basil, writing in Greek in the fourth century and well-versed in Greek culture, is apparently unfamiliar with the story of Nectanebus, since he says, 
@@ -70,25 +70,23 @@ Perhaps no better single illustration of the totally unhistorical and romantic c
 
 ### Julius Valerius
 
-
-
 The oldest Latin version of the Alexander romance is the _Res gestae Alexandri Macedonis_ of Julius Valerius. Who he was and when he lived are matters still veiled in obscurity; but it is customary to place him in the early fourth century on the basis of Zacher's contention that the Res gestae is copied in certain portions of the Itinerarium Alexandri, which was written during the years 340-345 A.D.  
 This dating would also serve to explain why Basil, writing in Greek before 379, had never heard of a king who had taken steps to have his son born under the star of royalty, while Augustine, writing in Latin between 413 and 426, mentions the story of a sage who selected a certain hour for intercourse with his wife in order that he might beget a marvelous son.  
 This would also suggest that the Latin version was older than the Greek, as in fact the extant manuscripts of it are. The oldest manuscript of Valerius, however, is a badly damaged palimpsest of the seventh century at Turin. Other manuscripts are one at Milan of the tenth century and another at Paris dating about 1200. [^554:1] The text of Valerius differs considerably from the Greek Pseudo-Callisthenes and was to undergo further alteration in later medieval Latin versions. 
 
  [^554:1]: Res gestae of Alexander of Macedon, contained in three MSS of the Royal Library in the British Museum, dating according to the catalogue from the eleventh and twelfth centuries: Royal 13-A-I, Royal 12-C-IV, and Royal 15-C- VI, are not the full text of Julius Valerius, but the epitome of which I shall soon speak. 
 
-### Oriental versions.
+### Oriental versions
 
 Before speaking of these we may mention other oriental versions of the story. An Armenian text dates from the fifth century. A Syriac version, which dates from the seventh or eighth century and was "much read by the Nestorians," was itself derived from an earlier Persian rendering. It seems to make use of both the Greek _Pseudo-Callisthenes_ and Julius Valerius since it includes incidents from either which are not found in the other. And it omits a considerable section of the Greek version besides adding episodes which are not found in it, although contained in Julius Valerius. We hear further of Arabic and Hebrew versions of the romance, while manuscripts of recent date supply an Ethiopic version of the _Pseudo-Callisthenes_ of unknown authorship and date, together with other Ethiopic histories and romances of Alexander. These are based partly upon Arabic and Jewish works but take great liberties with their sources in making alterations to suit a Christian audience, omitting for example, as Budge points out, Alexander's victory in the chariot race, and transforming Philip and Alexander into Christian martyrs, or the Greek gods into patriarchs and prophets like Enoch and Elijah. Even the Greek version did not remain unaltered in the Byzantine period when two recensions in prose and two more in verse are distinguished. Indeed, none of the Greek manuscripts of the work antedates the eleventh or twelfth century, they differ greatly, and some of them ascribe the romance to Alexander himself.
  
-### Medieval epitomes of Julius Valerius.
+### Medieval epitomes of Julius Valerius
  
 Such variations in the eastern versions of the story of Alexander illustrate how the middle ages made the classical heritage their own and prepare us for similar alterations in the Latin account current in western Europe. The work of Julius Valerius, though written in the rhetorical style characteristic of the declining Roman Empire and composed almost on the verge of the middle ages, was to undergo further alterations to adapt it more closely to medieval taste and use. By the ninth century, if not earlier, two epitomes of it had been made, and, beginning with that century, manuscripts of the shorter of these epitomes become far more numerous than those of the original Valerius. [^555:1]
 
  [^555:1]: The longer epitome is known from an Oxford MS, _Corpus Christi_  MS 82, and was believed by Meyer to be intermediary between Valerius and the other briefer epitome. Cillie, however, tries to prove the shorter epitome to be the older. 
  
-### Letters of Alexander.
+### Letters of Alexander
 
 Two sections of the Alexander legend were omitted in the Epitome, not because medieval men had lost interest in them but because they had become so fond of them as to enlarge upon them and issue them as distinct works. They often, however, accompany the Epitome in the manuscripts. One of these was the Letter of Alexander to Aristotle on the Marvels of India. [^555:2] 
 
@@ -120,7 +118,7 @@ Julius Valerius does not even mention Dindimus, but a third epistolary discussio
 
  [^556:3]: Published with _Palladius_ by Sir Edward Bisse in 1665; MSS are numerous.
 
-### Leo's Historia de praeliis.
+### Leo Historia de praeliis
 
 Leo, an archpriest of Naples, who went to Constantinople about 941-944 on an embassy for two dukes of Campania, John and Marinus, brought back with him a _History containing the conflicts and victories of Alexander the Great, King of Macedon_. Later Duke John, who was fond of science, had Leo translate this work from Greek into Latin, in which tongue it is entitled _Historia de praeliis_. We learn these facts from its prologue which is found only in the oldest extant manuscript, a Bamberg codex of the eleventh century, [^557:1] and in a manuscript of the twelfth or thirteenth century at Munich. 
 
